# session-aggregator

./: .gitignore  AGENTS.md  README.md  UI_PLAN.md  pyproject.toml  reply.txt  research.md  spec.md  todo.md
.claude/: settings.local.json
docs/: export-import-design.md
src/sagg/: __init__.py  bundle.py  cli.py  config.py  git_utils.py  models.py  sync.py
src/sagg/adapters/: __init__.py  ampcode.py  base.py  claude.py  codex.py  cursor.py  gemini.py  opencode.py  pi.py  registry.py
src/sagg/analytics/: __init__.py  friction.py  heatmap.py  oracle.py  similar.py
src/sagg/analytics/insights/: __init__.py  aggregator.py  cli_llm.py  extractors.py  heuristic.py  models.py
src/sagg/export/: __init__.py  agenttrace.py  html_report.py  markdown.py
src/sagg/security/: __init__.py  scrubber.py
src/sagg/storage/: __init__.py  db.py  store.py
src/sagg/tui/: __init__.py  app.py  styles.tcss
src/sagg/tui/widgets/: __init__.py  chat_view.py  detail_view.py  message_table.py  session_tree.py
tests/: conftest.py  test_adapters.py  test_budget.py  test_bundle.py  test_config.py  test_db.py  test_export.py  test_extractors.py  test_friction.py  test_git_link.py  test_heatmap.py  test_html_report.py  test_insights_aggregator.py  test_insights_cli.py  test_insights_cli_llm.py  test_insights_heuristic.py  test_insights_store.py  test_models.py  test_oracle.py  test_pi_adapter.py  test_security.py  test_similar.py  test_storage.py  test_summarize.py  test_sync.py
