[project]
name = "sagg"
version = "0.1.0"
description = "Unified AI Coding Session Aggregator - collect, search, and export sessions from multiple AI coding tools"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Session Aggregator Contributors" }
]
keywords = ["ai", "coding", "sessions", "opencode", "claude", "cursor", "codex", "agenttrace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "pydantic>=2.0.0",
    "textual>=0.89.0",
    "watchfiles>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
sagg = "sagg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sagg"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
